Avoid another condition that may cause the threading cache to become unsorted (and thus cause asserts on item removal).

BUG: 187334
BUG: 192815
BUG: 194430



svn path=/trunk/KDE/kdepim/; revision=974322